# pySOMweb

./: .editorconfig  .gitignore  .ruff.toml  LICENSE  Makefile  Pipfile  README.md  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
docs/: .editorconfig  conf.py  index.rst
docs/code-samples/: program.cs
docs/home-assistant/: index.rst  installation.rst
somweb/: __init__.py  __version__.py  client.py  const.py  core.py  httpclient.py  models.py
src/: main.py
src/somweb/: __init__.py  __version__.py  client.py  httpclient.py
tests/: core_test.py  quick_test.py  somweb_core_test.py  somweb_httpclient_test.py
